# SteeliumTweaker-4-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  deps.sh
Properties/: Settings.Designer.cs  Settings.settings
loc/: az.json  be.json  cs.json  de.json  en.json  es.json  et.json  fi.json  fr.json  hi.json  id.json  it.json  ja.json  kk.json  ko.json  lv.json  pl.json  pt.json  ru.json  th.json  tl.json  tr.json  tw.json  uk.json  vi.json  zh.json
src/: advanced.rs  app_blocker.rs  confirmation_dialog.rs  main.rs  mainwindow.rs  package_manager.rs  performance.rs  personalization.rs  process_manager.rs  quick_settings.rs  sat_handler.rs  settings_about.rs  settings_info.rs  system_info.rs  system_tweaks.rs  windows_components.rs  windows_update.rs
ui/: app.slint
