[package]
name = "makutweaker-4-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
# Версии slint в dependencies и build-dependencies должны быть строго одинаковыми
slint = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
rayon = "1.8"

# Добавленные недостающие библиотеки, без которых код не компилируется
dirs = "5.0"
num_cpus = "1.16"

[build-dependencies]
slint-build = "1.9"
