[package]
name = "makutweaker-4-linux"
version = "4.0.0"
edition = "2021"
authors = ["Minish777"]
description = "Мощный оптимизатор и твикер Linux систем"
license = "MIT"
repository = "https://github.com/Minish777/SteeliumTweaker-4-linux"

[dependencies]
slint = { version = "1.9", features = ["backend-qt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
rayon = "1.8"
dirs = "5.0"
tokio = { version = "1", features = ["rt", "sync"] }
num_cpus = "1.16"

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1